name:                PLLabel
version:             0.1.0.0
synopsis:            A stupidly definition of descriptive and enhancing Labels.
description:         Labels are either descriptive of the entire thing they label or are intended to enhance existing information/ nested labels. I want to use this in two places and anticipate extensions, hence the tiny library.
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     PLLabel

  -- other-modules:       
  other-extensions:    OverloadedStrings

  build-depends:       base >=4.7

                     , PLPrinter >= 0.1

                     , text

  -- hs-source-dirs:      
  default-language:    Haskell2010

